--- a/app/views/blog_posts/new.html.erb
+++ b/app/views/blog_posts/new.html.erb
@@ -3,4 +3,8 @@
     <%= f.label :title %>
     <%= f.text_field :title %>
   </div>
+  <div>
+    <%= f.label :body %>
+    <%= f.text_area :body %>
+  </div>
 <% end %>
